# daily_notifications

./: .gitignore  README.md  pyproject.toml
daily_upd/: .env  script.py  text.txt  utils.py
